updated versions for apim 420 and jdk 17